--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +27,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "class custom_dataset(Dataset):\n",
     "    '''sequence 만들기 및 정규화 추가 해야됨'''\n",
+    "    \n",
     "    def __init__(self,train,target,window_size=5):\n",
+    "        \n",
     "        self.window_size=window_size\n",
+    "        self.train=train.values\n",
+    "        self.target=target.values\n",
     "        self.len=train.shape[0]\n",
-    "        self.train=train\n",
-    "        self.target=target\n",
-    "\n",
+    "        \n",
+    "        self.scaler=StandardScaler()\n",
+    "        self.close_scaler=StandardScaler()\n",
+    "        \n",
     "    def __getitem__(self,index):\n",
-    "        return self.train[index],self.target[index]\n",
+    "        \n",
+    "        normalized_train=self.scaler.fit_transform(self.train[index:index+self.window_size])\n",
+    "        \n",
+    "        normalized_c=self.close_scaler.fit_transform(self.target[index:index+self.window_size])\n",
+    "        c_input=np.append(normalized_c[:-1],0).reshape(-1,1)\n",
+    "        \n",
+    "        train_with_zeropadding=np.concatenate((normalized_train,c_input),axis=1)\n",
+    "        \n",
+    "        return train_with_zeropadding,normalized_c[-1]\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return self.len"
+    "        return self.len-self.window_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[[ 1.9124,  1.9385,  0.0000,  1.9740,  0.9878],\n",
+      "         [-0.3873, -0.5043, -0.2357, -0.1850, -1.7063],\n",
+      "         [-0.9320, -0.7407, -1.6499, -0.5759, -0.3592],\n",
+      "         [-0.5689, -0.6619,  0.4714, -0.6341,  0.0898],\n",
+      "         [-0.0242, -0.0315,  1.4142, -0.5791,  0.0000]],\n",
+      "\n",
+      "        [[-0.1198, -0.5061, -0.5307, -0.2370, -0.8454],\n",
+      "         [-1.4681, -0.6912, -1.4673, -0.5645, -0.5160],\n",
+      "         [-0.5693, -0.6295, -0.0624, -0.6132, -0.4062],\n",
+      "         [ 0.7790, -0.1358,  0.5620, -0.5671, -0.1866],\n",
+      "         [ 1.3782,  1.9625,  1.4985,  1.9818,  0.0000]]], dtype=torch.float64), tensor([[0.9878],\n",
+      "        [1.9543]], dtype=torch.float64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset=custom_dataset(train=train,target=target)\n",
+    "train_loader=DataLoader(train_dataset,batch_size=2)\n",
+    "\n",
+    "for i in train_loader:\n",
+    "    print(i)\n",
+    "    break"
    ]
   },
   {
@@ -366,6 +412,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
